--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "illuminate/html": "^5.0",
         "barryvdh/laravel-debugbar": "^2.0",
-        "mcamara/laravel-localization": "1.0.*"
+        "mcamara/laravel-localization": "1.0.*",
+        "doctrine/dbal": "v2.4.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
