--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "illuminate/html": "^5.0",
         "barryvdh/laravel-debugbar": "^2.0",
         "mcamara/laravel-localization": "1.0.*",
-        "doctrine/dbal": "v2.4.5"
+        "doctrine/dbal": "v2.4.5",
+        "guzzlehttp/guzzle": "^6.2",
+        "predis/predis": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
